<resources>
    <string name="_1000_icons_amp_widgets">1000+ Icons &amp; Widgets</string>
    <string name="_1000_icons_widgets">1000+ Icons &amp; Widgets</string>
    <string name="_1000_themes">1000+ Themes</string>
    <string name="_1000_unique_themes_stylish_wallpapers">1000+ Unique\nThemes &amp; Stylish Wallpapers</string>
    <string name="_1000_wallpapers">1000+ Wallpapers</string>
    <string name="_1_please_enable_the_theme_keyboard">1. Please enable the Theme Keyboard</string>
    <string name="_1_the_problem_with_the_watermark_in_the_lower_right_corner_of_the_icon">1. The problem with the watermark in the lower right corner of the icon</string>
    <string name="_2_how_to_turn_on_permissions_install_icon">2. How to turn on permissions (Install icon)</string>
    <string name="_2_switch_to_keyboard">2. Switch to Theme Keyboard</string>
    <string name="_3_turn_on_positioning_permission_for_precise_positioning_weather_widget">3. Turn on positioning permission for precise positioning (weather widget)</string>
    <string name="_5_basic_objections_framework">5 Basic objections framework</string>
    <string name="_s_off">%s OFF</string>
    <string name="a_beautiful_design_can_lift_your_mood">A beautiful design can lift your mood</string>
    <string name="a_fresh_style_can_make_every_moment_feel_better">A fresh style can make every moment feel better</string>
    <string name="a_fresh_theme_for_a_fresh_start">A fresh theme for a fresh start</string>
    <string name="a_little_change_for_today">A little change for today</string>
    <string name="a_new_theme_can_completely_change_how_your_phone_feels">A new theme can completely change how your phone feels</string>
    <string name="a_small_daily_habit_to_keep_your_phone_feeling_new">A small daily habit to keep your phone feeling new</string>
    <string name="abbreviation_unit_milliseconds">%s ms</string>
    <string name="abbreviation_unit_minutes">%s min</string>
    <string name="abc">ABC</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_github_link">View on GitHub</string>
    <string name="academic">Academic</string>
    <string name="accept_and_continue">Accept and continue</string>
    <string name="action_cancel">Cancel</string>
    <string name="active_input_methods">Active input methods</string>
    <string name="ad_will_show_in_seconds">Ad will show in seconds</string>
    <string name="add">Add</string>
    <string name="add_dictionary">Select a dictionary to add. Dictionaries in .dict format can be downloaded %s.</string>
    <string name="add_new_dictionary_ask_locale">To which language should the dictionary \"%1$s\" for %2$s be added?</string>
    <string name="add_new_dictionary_title">Add dictionary from file</string>
    <string name="add_new_item">Add a new item</string>
    <string name="add_to_personal_dictionary">Add words to personal dictionary</string>
    <string name="add_to_personal_dictionary_summary">Use device personal dictionary to store learned words</string>
    <string name="add_widget_to_home_screen">Add Widget to Home Screen</string>
    <string name="ads">Ads</string>
    <string name="ads_load_error">Ads have not loaded or internet connection error</string>
    <string name="after_first_year">After First Year</string>
    <string name="agree">Agree</string>
    <string name="ai_chat">AI Chat</string>
    <string name="aida_copywriting">AIDA Copywriting</string>
    <string name="align">Align</string>
    <string name="all">All</string>
    <string name="all_colors">Show all colors</string>
    <string name="all_features_forever">All features - Forever</string>
    <string name="all_features_one_affordable_plan">All features, one affordable plan.</string>
    <string name="all_themes_wallpapers">All themes &amp; wallpapers</string>
    <string name="allow">Allow</string>
    <string name="allow_weather_permission_message">Allow us to access your location to show the weather on the app</string>
    <string name="android_spell_checker_settings">Theme Keyboard Spell Checker Settings</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="angry">Angry</string>
    <string name="announce_keyboard_hidden">Keyboard hidden</string>
    <string name="announce_keyboard_mode">Showing %s keyboard</string>
    <string name="app_icons_amp_widget">1000+ App icons &amp; Widgets</string>
    <string name="app_launcher_name">Theme Keyboard</string>
    <string name="app_name">Themes</string>
    <string name="app_slogan">100% FOSS keyboard, based on AOSP.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="arabic">Arabic</string>
    <string name="are_you_enjoying_ai_type">Are you enjoying Theme Keyboard?</string>
    <string name="are_you_satisfied">Are you satisfied?</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to exit?</string>
    <string name="are_you_sure_you_want_to_reset_the_default_keyboard">Are you sure you want to reset the default keyboard?</string>
    <string name="ask_ai">Ask AI</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the first word of each sentence</string>
    <string name="auto_capital">Auto capital</string>
    <string name="auto_capitalization">Auto-capitalization</string>
    <string name="auto_correction_confidence">Auto-correction confidence</string>
    <string name="auto_correction_summary">Spacebar and punctuation automatically correct mistyped words</string>
    <string name="auto_correction_threshold_mode_aggressive">Aggressive</string>
    <string name="auto_correction_threshold_mode_index_aggressive">1</string>
    <string name="auto_correction_threshold_mode_index_modest">0</string>
    <string name="auto_correction_threshold_mode_index_very_aggressive">2</string>
    <string name="auto_correction_threshold_mode_modest">Modest</string>
    <string name="auto_correction_threshold_mode_off">Off</string>
    <string name="auto_correction_threshold_mode_very_aggressive">Very aggressive</string>
    <string name="auto_renewable">Auto renewable</string>
    <string name="auto_renewal_cancel_anytime_in_subscriptions_on_google_play">Auto-renewal, cancel anytime in Subscriptions on Google Play.</string>
    <string name="auto_renewal_manage_your_subscriptions_in_account_settings_on_the_play_store_app_after_the_purchase_you_won_t_be_charged_if_you_cancel_before_your_trial_ends">Auto-renewal, manage your subscriptions in Account Settings on the Play Store app after the purchase. You won’t be charged if you cancel before your trial ends</string>
    <string name="auto_user_color">Choose color automatically</string>
    <string name="autocorrect">Auto-correction</string>
    <string name="autospace_after_punctuation">Autospace after punctuation</string>
    <string name="autospace_after_punctuation_summary">Automatically insert space after punctuation when typing a new word</string>
    <string name="available_dictionary_experimental">%s (experimental)</string>
    <string name="awesome_widgets">Awesome Widgets ����</string>
    <string name="awesome_widgets_shop">Awesome Widgets</string>
    <string name="customize_themes">Customize theme</string>
    <string name="customize_widget">Customize widget</string>
    <string name="debug_settings_title">Debug settings</string>
    <string name="delete">Delete</string>
    <string name="faq">FAQ</string>
    <string name="feedback">Feedback</string>
    <string name="how_to_cancel">Manage your subscriptions in Account Settings on the Google Play App after purchase</string>
    <string name="how_to_get_icon">How to get Icons</string>
    <string name="how_to_get_widget">How to get Widgets</string>
    <string name="how_to_switch_the_keyboard">How to switch the Keyboard</string>
    <string name="how_to_use">How to use</string>
    <string name="keyboard">Keyboard</string>
    <string name="keyboard_setting">Keyboard Setting</string>
    <string name="language">Language</string>
    <string name="more_apps">More Apps</string>
    <string name="policy_and_terms_2">This subscription gives you unlimited access to our app contents library. If you don not cancel before the trial ends, you will be automatically charged weekly or yearly fees until you cancel. With the Lifetime package, you only need to buy it once and permanently unlock all the features of the application.</string>
    <string name="prefs_debug_mode">Debug Mode</string>
    <string name="prefs_dump_dynamic_dicts">Dump dictionary</string>
    <string name="prefs_force_non_distinct_multitouch">Force non-distinct multitouch</string>
    <string name="prefs_show_debug_settings">Enable debug settings</string>
    <string name="prefs_show_suggestion_infos">Show suggestion infos</string>
    <string name="privacy">Privacy policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_us">Rate us</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="save">Save</string>
    <string name="share_friends">Share with friends</string>
    <string name="sliding_key_input_preview">Show slide indicator</string>
    <string name="sliding_key_input_preview_summary">Display visual cue while sliding from Shift or Symbol keys</string>
    <string name="start_charging_animation">Start Charging Animation</string>
    <string name="support_amp_feedback">Support &amp; Feedback</string>
    <string name="temperature_unit">Temperature Unit</string>
    <string name="term_of_use">Terms of use</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="user_dict_settings_add_locale_option_name">Language:</string>
    <string name="user_dict_settings_add_shortcut_hint">Optional shortcut</string>
    <string name="user_dict_settings_add_shortcut_option_name">Shortcut:</string>
    <string name="user_dict_settings_add_weight_value">Weight:</string>
    <string name="user_dict_settings_add_word_hint">Type a word</string>
</resources>