<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/debug_settings_title"
    android:key="english_ime_debug_settings">
    <SwitchPreference
        android:persistent="true"
        android:title="@string/prefs_show_debug_settings"
        android:key="show_debug_settings"/>
    <SwitchPreference
        android:persistent="true"
        android:title="@string/prefs_debug_mode"
        android:key="debug_mode"
        android:defaultValue="false"/>
    <SwitchPreference
        android:persistent="true"
        android:title="@string/prefs_show_suggestion_infos"
        android:key="show_suggestion_infos"
        android:defaultValue="false"/>
    <SwitchPreference
        android:persistent="true"
        android:title="@string/prefs_force_non_distinct_multitouch"
        android:key="force_non_distinct_multitouch"
        android:defaultValue="false"/>
    <SwitchPreference
        android:persistent="true"
        android:title="@string/sliding_key_input_preview"
        android:key="sliding_key_input_preview"
        android:summary="@string/sliding_key_input_preview_summary"
        android:defaultValue="true"/>
    <PreferenceCategory
        android:title="@string/prefs_dump_dynamic_dicts"
        android:key="dump_dictionaries"/>
</PreferenceScreen>
