<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"  android:orientation="vertical" android:background="?attr/primaryBackgroundColor" android:layout_width="match_parent" android:layout_height="match_parent">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_theme"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.starnest.upsale.ui.banner.UpsaleBannerView
                android:id="@+id/bannerUpsale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_12"
                android:layout_marginHorizontal="@dimen/dp_16"/>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:background="@drawable/bg_corner_14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_4"
                android:layout_marginBottom="@dimen/dp_20"
                android:elevation="?attr/elevation"
                android:backgroundTint="?attr/secondaryBackgroundColor"
                android:layout_marginHorizontal="@dimen/dp_16">
                <com.starnest.widget.ui.setting.widget.SettingItemView
                    android:id="@+id/siAddTheme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:setting_arrowEnabled="false"
                    app:setting_title="@string/customize_themes"/>
                <com.starnest.widget.ui.setting.widget.SettingItemView
                    android:id="@+id/siAddWidget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:setting_arrowEnabled="false"
                    app:setting_title="@string/customize_widget"/>
                <com.starnest.widget.ui.setting.widget.SettingItemView
                    android:id="@+id/siStartCharging"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:setting_arrowEnabled="false"
                    app:setting_title="@string/start_charging_animation"
                    app:setting_toggleEnabled="true"/>
                <com.starnest.widget.ui.setting.widget.SettingItemView
                    android:id="@+id/siTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:setting_showLine="false"
                    app:setting_title="@string/temperature_unit"/>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textSize="@dimen/sp_16"
                    android:textColor="?attr/detailTextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/how_to_use"
                    android:fontFamily="@font/helvetica_medium"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:paddingHorizontal="@dimen/dp_16"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="vertical"
                    android:background="@drawable/bg_corner_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:elevation="?attr/elevation"
                    android:backgroundTint="?attr/secondaryBackgroundColor"
                    android:layout_marginHorizontal="@dimen/dp_16">
                    <com.starnest.widget.ui.setting.widget.SettingItemView
                        android:id="@+id/siFQA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:setting_arrowEnabled="true"
                        app:setting_title="@string/faq"/>
                    <com.starnest.widget.ui.setting.widget.SettingItemView
                        android:id="@+id/siGetIcon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:setting_arrowEnabled="true"
                        app:setting_title="@string/how_to_get_icon"/>
                    <com.starnest.widget.ui.setting.widget.SettingItemView
                        android:id="@+id/siGetWidget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:setting_arrowEnabled="true"
                        app:setting_showLine="false"
                        app:setting_title="@string/how_to_get_widget"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textSize="@dimen/sp_16"
                    android:textColor="?attr/detailTextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keyboard"
                    android:fontFamily="@font/helvetica_medium"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:paddingHorizontal="@dimen/dp_16"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="vertical"
                    android:background="@drawable/bg_corner_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:elevation="?attr/elevation"
                    android:backgroundTint="?attr/secondaryBackgroundColor"
                    android:layout_marginHorizontal="@dimen/dp_16">
                    <com.starnest.widget.ui.setting.widget.SettingItemView
                        android:id="@+id/siKeyboardSetting"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:setting_arrowEnabled="true"
                        app:setting_title="@string/keyboard_setting"/>
                    <com.starnest.widget.ui.setting.widget.SettingItemView
                        android:id="@+id/siHowToSwitchKeyboard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:setting_arrowEnabled="true"
                        app:setting_showLine="false"
                        app:setting_title="@string/how_to_switch_the_keyboard"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textSize="@dimen/sp_16"
                    android:textColor="?attr/detailTextColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/support_amp_feedback"
                    android:fontFamily="@font/helvetica_medium"
                    android:layout_marginHorizontal="@dimen/dp_16"
                    android:paddingHorizontal="@dimen/dp_16"
                    app:setting_arrowEnabled="true"/>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:orientation="vertical"
                    android:background="@drawable/bg_corner_14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_marginBottom="@dimen/dp_20"
                    android:elevation="?attr/elevation"
                    android:backgroundTint="?attr/secondaryBackgroundColor"
                    android:layout_marginHorizontal="@dimen/dp_16">
                    <com.starnest.widget.ui.setting.widget.SettingItemView
                        android:id="@+id/siLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:setting_arrowEnabled="true"
                        app:setting_title="@string/language"/>
                    <com.starnest.widget.ui.setting.widget.SettingItemView
                        android:id="@+id/siFeedback"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:setting_arrowEnabled="true"
                        app:setting_title="@string/feedback"/>
                    <com.starnest.widget.ui.setting.widget.SettingItemView
                        android:id="@+id/siRate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:setting_arrowEnabled="true"
                        app:setting_title="@string/rate_us"/>
                    <com.starnest.widget.ui.setting.widget.SettingItemView
                        android:id="@+id/siMoreApp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:setting_arrowEnabled="true"
                        app:setting_isAds="false"
                        app:setting_showLine="true"
                        app:setting_title="@string/more_apps"/>
                    <com.starnest.widget.ui.setting.widget.SettingItemView
                        android:id="@+id/siTerm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:setting_arrowEnabled="true"
                        app:setting_title="@string/term_of_use"/>
                    <com.starnest.widget.ui.setting.widget.SettingItemView
                        android:id="@+id/siShare"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:setting_arrowEnabled="true"
                        app:setting_title="@string/share_friends"/>
                    <com.starnest.widget.ui.setting.widget.SettingItemView
                        android:id="@+id/siPrivacy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:setting_arrowEnabled="true"
                        app:setting_showLine="false"
                        app:setting_title="@string/privacy"/>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/viewBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.appcompat.widget.LinearLayoutCompat>