<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"  android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="horizontal"
        android:id="@+id/llPolicyTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="?attr/detailTextColor"
            android:gravity="center"
            android:id="@+id/tvPolicy"
            android:tag="binding_1"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/privacy_policy"
            android:lines="1"
            android:layout_weight="1"
            android:fontFamily="@font/helvetica_regular"
            android:paddingVertical="@dimen/dp_4"/>
        <TextView
            android:textSize="@dimen/sp_15"
            android:textColor="?attr/detailTextColor"
            android:gravity="center"
            android:id="@+id/tvTerm"
            android:tag="binding_2"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/terms_of_use"
            android:lines="1"
            android:layout_weight="1"
            android:fontFamily="@font/helvetica_regular"
            android:paddingVertical="@dimen/dp_4"/>
        <TextView
            android:textSize="@dimen/sp_15"
            android:textColor="?attr/titleTextColor"
            android:gravity="center"
            android:tag="binding_3"
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/restore_purchase"
            android:lines="1"
            android:layout_weight="1"
            android:fontFamily="@font/helvetica_medium"
            android:paddingVertical="@dimen/dp_4"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <TextView
        android:textSize="@dimen/sp_15"
        android:textColor="?attr/detailTextColor"
        android:id="@+id/tvDes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/policy_and_terms_2"
        android:fontFamily="@font/helvetica_regular"
        app:layout_constraintBottom_toTopOf="@+id/tvCancelSub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llPolicyTerms"/>
    <TextView
        android:textSize="@dimen/sp_15"
        android:textColor="?attr/detailTextColor"
        android:id="@+id/tvCancelSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_2"
        android:text="@string/how_to_cancel"
        android:fontFamily="@font/helvetica_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDes"/>
</androidx.constraintlayout.widget.ConstraintLayout>