<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_dict_settings_add_dialog_top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/user_dictionary_add_word_buttons">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_gravity="center"
                android:id="@+id/user_dictionary_add_word_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_dict_settings_add_word_hint"
                android:maxLength="@integer/config_user_dictionary_max_word_length"
                android:inputType="textNoSuggestions"
                android:imeOptions="actionNext"
                android:layout_marginStart="8dp"
                android:layout_marginVertical="8dp"/>
            <GridLayout
                android:id="@+id/user_dictionary_add_word_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">
                <TextView
                    android:layout_gravity="start|center_vertical"
                    android:id="@+id/user_dictionary_add_shortcut_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_dict_settings_add_shortcut_option_name"
                    style="?android:attr/textAppearanceMedium"/>
                <EditText
                    android:layout_gravity="center"
                    android:id="@+id/user_dictionary_add_shortcut"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="6dp"
                    android:hint="@string/user_dict_settings_add_shortcut_hint"
                    android:maxLength="@integer/config_user_dictionary_max_word_length"
                    android:inputType="textNoSuggestions"
                    android:imeOptions="actionNext"
                    android:layout_marginStart="8dp"/>
                <TextView
                    android:layout_gravity="start|center_vertical"
                    android:id="@+id/user_dictionary_add_weight_label"
                    android:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_dict_settings_add_weight_value"
                    style="?android:attr/textAppearanceMedium"/>
                <EditText
                    android:layout_gravity="center"
                    android:id="@+id/user_dictionary_add_weight"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="6dp"
                    android:hint="250"
                    android:maxLength="3"
                    android:inputType="number"
                    android:imeOptions="actionDone"
                    android:layout_marginStart="8dp"/>
                <TextView
                    android:layout_gravity="start|center_vertical"
                    android:id="@+id/user_dictionary_add_locale_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_dict_settings_add_locale_option_name"
                    style="?android:attr/textAppearanceMedium"/>
                <Spinner
                    android:layout_gravity="center"
                    android:id="@+id/user_dictionary_add_locale"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="6dp"
                    android:layout_marginStart="4dp"
                    app:backgroundTint="@color/foreground_weak"/>
            </GridLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_gravity="center"
        android:id="@+id/user_dictionary_add_word_buttons"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:layout_alignParentBottom="true"
        android:paddingHorizontal="5dp">
        <Button
            android:textColor="@android:color/white"
            android:id="@+id/user_dictionary_delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_weight="1"
            android:backgroundTint="@color/accent"
            android:layout_marginHorizontal="10dp"/>
        <Button
            android:textColor="@android:color/white"
            android:id="@+id/user_dictionary_save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_save"
            android:backgroundTint="@color/accent"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>
</RelativeLayout>
